--- a/CNewsProject/Views/Shared/_RoleBasedLinksPartial.cshtml
+++ b/CNewsProject/Views/Shared/_RoleBasedLinksPartial.cshtml
@@ -14,21 +14,21 @@
 
             if (isJournalist)
             {
-                <li class="nav-item">
+                <li class="nav-item c-nav-item-hoverable">
                     <a id="journalist" class="nav-link text-light c-border-round" asp-controller="Journalist" asp-action="Index">Journalist</a>
                 </li>
             }
 
             if (isThePublisher)
             {
-                <li class="nav-item">
+                <li class="nav-item c-nav-item-hoverable">
                     <a id="thepublisher" class="nav-link text-light c-border-round" asp-controller="ThePublisher" asp-action="Index">The Publisher</a>
                 </li>
             }
 
             if (isAdmin)
             {
-                <li class="nav-item">
+                <li class="nav-item c-nav-item-hoverable">
                     <a id="admin" class="nav-link text-light c-border-round" asp-controller="Admin" asp-action="Index">Admin</a>
                 </li>
             }
