--- a/CNewsProject/Views/Shared/Components/EditAccount/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/EditAccount/Default.cshtml
@@ -17,5 +17,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary" id="save-edit-acc">Save</button>
-    <button class="btn btn-danger edit-acc-btn">Cancel</button><br/>
+    <button type="reset" class="btn btn-danger edit-acc-btn">Cancel</button><br/>
 </form>
