--- a/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
+++ b/CNewsProject/Views/Shared/_CategoriesDropdownPartial.cshtml
@@ -11,6 +11,9 @@
             currentSelected = "Latest";
         else
             currentSelected = currentAction;
+
+        if (currentAction == "Article")
+            currentSelected = "Categories";
     }
 }
 
