--- a/CNewsProject/Views/Journalist/CreateArticle.cshtml
+++ b/CNewsProject/Views/Journalist/CreateArticle.cshtml
@@ -22,12 +22,18 @@
 
         <form id="addArticle" asp-action="CreateArticle" method="post" enctype="multipart/form-data">
 
-            <div class="mb-3">
-                <label asp-for="ArticleImage">Select File</label>
+            
+            <div class="mb-1">
+                <label asp-for="ArticleImage">Select Image</label>
                 <br/>
                 <input asp-for="ArticleImage" />
             </div>
-
+            <div class="mb-3" style="color: red;">
+                <p>
+                    NOTICE: <span>Images will be cropped if not 16:9 Aspect Ratio</span>
+                </p>
+            </div>
+            
             <div class="mb-3">
                 <label asp-for="Headline">Headline</label>
                 <br/>
