Added Weather and ExchangeRate to mobile

--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -16,10 +16,11 @@
 			</section>
 		</div>
 		<aside class="col-3 d-none d-md-block">
-			<div id="VCWeather">
-				<vc:weather name-of-city="Placeholder"></vc:weather>
+			<div class="mt-1 mb-1" id="VCWeather">
+
 			</div><br />
-			<vc:exchange-all></vc:exchange-all>
+			<vc:exchange-all class="mb-1"></vc:exchange-all>
+			<vc:sidebar-headlines count="5"></vc:sidebar-headlines>
 		</aside>
 	</div>
 
