--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -1,30 +1,32 @@
 ﻿@using CNewsProject.StaticTempData
 
-<div class="card">
-    <div class="card-body">
-        <div style="background-color:#dee6ef;">
-    <h3>Exchange rates</h3>
+<div class="accordion">
+    <div class="card accordion-item">
+        <div class="accordion-header" id="headingExch">
+            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapseExch" aria-expanded="true" aria-controls="collapseExch">
+                <h3>Exchange rates</h3>
+            </button>
         </div>
-    @{
-        // Calculating base exchange rates for 100 SEK and ensuring correct formatting
-        // string usd = (Model.USD * 100).ToString("F2");
-        // string eur = (Model.EUR * 100).ToString("F2");
-        // string jpy = (Model.JPY * 100).ToString("F2");
-        // string cny = (Model.CNY * 100).ToString("F2");
-        // string gbp = (Model.GBP * 100).ToString("F2");
-    }
-
-    <p>Enter the amount in SEK:</p>
-    <input id="amountInSek" class="form-control mb-3" type="number" value="100" onchange="updateExchangeRates()" />
-    <ul>
-        <li id="liusd">USD : @CTempData.ExchangeRates.USD $</li>
-        <li id="lieur">EUR : @CTempData.ExchangeRates.EUR €</li>
-        <li id="lijpy">JPY : @CTempData.ExchangeRates.JPY Yen</li>
-        <li id="licny">CNY : @CTempData.ExchangeRates.CNY Yuán</li>
-        <li id="ligbp">GBP : @CTempData.ExchangeRates.GBP £</li>
-    </ul>
-
-    <script type="text/javascript">
+        @{
+            // Calculating base exchange rates for 100 SEK and ensuring correct formatting
+            // string usd = (Model.USD * 100).ToString("F2");
+            // string eur = (Model.EUR * 100).ToString("F2");
+            // string jpy = (Model.JPY * 100).ToString("F2");
+            // string cny = (Model.CNY * 100).ToString("F2");
+            // string gbp = (Model.GBP * 100).ToString("F2");
+        }
+        <div id="collapseExch" class="accordion-collapse collapse show card-body" aria-labelledby="headingExch">
+            <p>Enter the amount in SEK:</p>
+            <input id="amountInSek" class="form-control mb-3" type="number" value="100" onchange="updateExchangeRates()"/>
+            <ul>
+                <li id="liusd">USD : @CTempData.ExchangeRates.USD $</li>
+                <li id="lieur">EUR : @CTempData.ExchangeRates.EUR €</li>
+                <li id="lijpy">JPY : @CTempData.ExchangeRates.JPY Yen</li>
+                <li id="licny">CNY : @CTempData.ExchangeRates.CNY Yuán</li>
+                <li id="ligbp">GBP : @CTempData.ExchangeRates.GBP £</li>
+            </ul>
+        </div>
+        <script type="text/javascript">
         // Parsing Razor variables as floats in JavaScript
         let usdRate = parseFloat('@(CTempData.ExchangeRates.USD.ToString(System.Globalization.CultureInfo.InvariantCulture))');
         let eurRate = parseFloat('@(CTempData.ExchangeRates.EUR.ToString(System.Globalization.CultureInfo.InvariantCulture))');
