--- a/CNewsProject/Views/Shared/Components/ExchangeAll/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/ExchangeAll/Default.cshtml
@@ -9,17 +9,31 @@
         <p>100 SEK equals</p>
     </div>
     
-        <ul class="row">
-            @{
+    <ul class="row">
+        @{
 
-                foreach (var prop in CTempData.ExchangeRates.GetType().GetProperties().Where(p => p.Name != "SEK" && p.Name != "DateUpdated"))
-                {
-                    string temp = string.Format("{0:F2}", Convert.ToDecimal(prop.GetValue(CTempData.ExchangeRates)) * 100);
-                    string liItem = prop.Name + " : " + temp;
+            foreach (var prop in CTempData.ExchangeRates.GetType().GetProperties().Where(p => p.Name != "SEK" && p.Name != "DateUpdated"))
+            {
+                string temp = string.Format("{0:F2}", Convert.ToDecimal(prop.GetValue(CTempData.ExchangeRates)) * 100);
+                string liItem = prop.Name + " : " + temp;
                     
-                    <li class="col-6 ps-0">@liItem</li>
-                }
-                
+                <li class="col-6 ps-0">@liItem</li>
             }
-        </ul>
+                
+        }
+    </ul>
 </div>
+
+@* If we want to add a read more to this use this general setup.*@
+@* And put the five basic exchange rates outside of this and the rest inside of this *@
+
+@* <div class="accordion"> *@
+@*     <div class="accordion-item"> *@
+@*         <div class="accordion-header" id="$1$id for header#1#"> *@
+@*             <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="$1$id for collapse#1#" aria-expanded="true" aria-controls="$1$id for collapse#1#"><h3>$1$View More#1#</h3></button> *@
+@*         </div> *@
+@*         <div id="$1$id for collapse#1#" class="accordion-collapse collapse" aria-labelledby="$1$id for header#1#"> *@
+@*             $1$CONTENT#1# *@
+@*         </div> *@
+@*     </div> *@
+@* </div> *@
