--- a/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/SidebarHeadlines/Default.cshtml
@@ -20,61 +20,91 @@
 </style>
 
 <div class="card">
-	<div class="card-body">
-	<br />
-		<div style="background-color:#dee6ef;">
-		<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Local News</h2></a>
-		</div>
-	<table>
-		@{
-			foreach (var item in Model.localArticles)
-			{
-				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
-			}
-		}
-	</table><br />
-		<div style="background-color:#dee6ef;">
-	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Sweden News</h2></a>
-		</div>
-	<table>
-		@{
-			foreach (var item in Model.swedenArticles)
-			{
-				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
-			}
-		}
-	</table><br />
-			<div style="background-color:#dee6ef;">
-	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>World News</h2></a>
-			</div><table>
-		@{
-			foreach (var item in Model.worldArticles)
-			{
-				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
-			}
-		}
-	</table><br />
-				<div style="background-color:#dee6ef;">
-	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Economy News</h2></a>
-				</div>
-	<table>
-		@{
-			foreach (var item in Model.economyArticles)
-			{
-				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
-			}
-		}
-	</table><br />
-					<div style="background-color:#dee6ef;">
-	<a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local"><h2>Sport News</h2></a>
-					</div>
-	<table>
-		@{
-			foreach (var item in Model.sportArticles)
-			{
-				<tr><td><a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a></td></tr>
-			}
-		}
-	</table>
-	</div>
+    <div class="card-body">
+        <div style="background-color:#dee6ef;">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+                <h2>Local News</h2>
+            </a>
+        </div>
+        <table>
+            @{
+                foreach (var item in Model.localArticles)
+                {
+                    <tr>
+                        <td>
+                            <a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </table><br/>
+        <div style="background-color:#dee6ef;">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+                <h2>Sweden News</h2>
+            </a>
+        </div>
+        <table>
+            @{
+                foreach (var item in Model.swedenArticles)
+                {
+                    <tr>
+                        <td>
+                            <a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </table><br/>
+        <div style="background-color:#dee6ef;">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+                <h2>World News</h2>
+            </a>
+        </div>
+        <table>
+            @{
+                foreach (var item in Model.worldArticles)
+                {
+                    <tr>
+                        <td>
+                            <a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </table><br/>
+        <div style="background-color:#dee6ef;">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+                <h2>Economy News</h2>
+            </a>
+        </div>
+        <table>
+            @{
+                foreach (var item in Model.economyArticles)
+                {
+                    <tr>
+                        <td>
+                            <a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </table><br/>
+        <div style="background-color:#dee6ef;">
+            <a style="color:black; text-decoration:none" asp-controller="News" asp-action="Local">
+                <h2>Sport News</h2>
+            </a>
+        </div>
+        <table>
+            @{
+                foreach (var item in Model.sportArticles)
+                {
+                    <tr>
+                        <td>
+                            <a asp-controller="News" asp-action="Article" asp-route-id="@item.Id">@item.Headline</a>
+                        </td>
+                    </tr>
+                }
+            }
+        </table>
+    </div>
 </div>
