--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -1,39 +1,59 @@
 ﻿@model UserProfileVM
+@inject IJsonHelper Json
 
 @{
     //Vars
     string profileName = Model.User.UserName + "'s Profile";
+
+    List<string> authorNames = new List<string>();
+
+    foreach (var item in ViewBag.authorList)
+    {
+	    authorNames.Add(item);
+    }
 }
 
 <h1>@profileName</h1>
 <div class="row">
-    <div class="col-9">
-        <vc:edit-account user="@Model.User"></vc:edit-account>
-    </div>
+	<div class="col-9">
+		<vc:edit-account user="@Model.User"></vc:edit-account>
+	</div>
 
-    @{
-        <aside class="col-3">
+	@{
+		<aside class="col-3">
 
-            @{
-	            if (Model.SubInfo != null)
-	            {
-		            <p>@Model.SubInfo.SubscriptionType.TypeName</p> //TODO SNARAST make pretty uwu
-		            <p>@Model.SubInfo.HistoricalPrice</p>
-		            <p>@Model.SubInfo.RenewedDate</p>
-		            <p>@Model.SubInfo.ExpiresDate</p>
-		            <br/><a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Manage Subscription</a> //TODO maybe change this to a different view later
+			@{
+				if (Model.SubInfo != null)
+				{
+					<p>@Model.SubInfo.SubscriptionType.TypeName</p> //TODO SNARAST make pretty uwu
+					<p>@Model.SubInfo.HistoricalPrice</p>
+					<p>@Model.SubInfo.RenewedDate</p>
+					<p>@Model.SubInfo.ExpiresDate</p>
+					<br/><a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Manage Subscription</a> //TODO maybe change this to a different view later
 
-	            }
-	            else
-	            {
-		            <br/><a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
-	            }
-            }
+				}
+				else
+				{
+					<br/><a class="btn btn-primary text-white" asp-controller="Subscription" asp-action="Index">Subscribe Now</a>
+				}
+			}
 
-        </aside>
-    }
+		</aside>
+	}
 
 </div>
+
+<script type="text/javascript">
+	
+	document.addEventListener("DOMContentLoaded", function () {
+		let authorNames = @Html.Raw(Json.Serialize(authorNames));
+		authorNames.forEach(function (item) {
+			console.log(item);
+		});
+	});
+	
+	
+</script>
 @*I'm thinking a View Component here so you don't have to refresh page on EDIT*@
 
 
