--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -54,7 +54,7 @@
             </form>
             <div class="d-md-none">
                 <div class="mt-1 mb-1" id="VCWeather">
-
+                    <vc:weather></vc:weather>
                 </div>
                 <div class="mb-1" id="ExchangeVCDiv">
                     @*This Is Now Updated. Only loads data from API if data is old*@
